force-app/main/default/objects/Account_deletion_setting__mdt/Account_deletion_setting__mdt.object-meta.xml
<CustomObject>
    <label>Account deletion setting</label>
    <pluralLabel>Account deletion settings</pluralLabel>
</CustomObject>