force-app/main/default/objects/Account_deletion_setting__mdt/fields/Admin_emails__c.field-meta.xml
<CustomField>
    <fullName>Admin_emails__c</fullName>
    <label>Admin emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>