force-app/main/default/objects/Account_deletion_setting__mdt/fields/Last_account_id__c.field-meta.xml
<CustomField>
    <fullName>Last_account_id__c</fullName>
    <label>Last account id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>