force-app/main/default/objects/Account_deletion_setting__mdt/fields/Max_number_of_analysed_accounts__c.field-meta.xml
<CustomField>
    <fullName>Max_number_of_analysed_accounts__c</fullName>
    <label>Max number of analysed accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>