force-app/main/default/objects/Account_deletion_setting__mdt/fields/Nb_run_per_day__c.field-meta.xml
<CustomField>
    <fullName>Nb_run_per_day__c</fullName>
    <label>Nb run per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>